--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,13 @@
 spring:
   application:
     name: webshop
+  datasource:
+    url: jdbc:mariadb://localhost:3308/webshop
+    username: root
+    password: pass
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 server:
   port: 8888
